test_suite/tests/ui/common/cfg_attr_duplicate_cross_conditional.rs
use nutype::nutype;

// Same trait in multiple cfg_attr entries
#[nutype(
    derive(Debug),
    cfg_attr(test, derive(Clone)),
    cfg_attr(test, derive(Clone)),
)]
struct Name(String);

fn main() { }
